@@ -7,8 +7,9 @@ buh :) - 25 June 2008
    [HelLViS69]
    - finally updated this file :)
    - New StatusBar applet: Update Indicator
-   - New KVS command 'continue'
+   - New KVS command: added 'continue'
    - Improved About module
+   - New KVS function: added $objects.name
 
    [Voker57]
    - New audio support: Phonon (wip)
